[gd_scene load_steps=59 format=3 uid="uid://c1nmhavvp6eip"]

[ext_resource type="Script" path="res://Scripts/Player/ThirdPersonCamera.gd" id="1_5i1xc"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerMovement.gd" id="2_afa8s"]
[ext_resource type="PackedScene" uid="uid://dh1b1a7qfjn3" path="res://Models/Characters/Player/Player.glb" id="2_isjoo"]
[ext_resource type="Script" path="res://Scripts/SpellCasting/SpellFactory.gd" id="4_8qt2s"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerSwimming.gd" id="4_t3yqj"]
[ext_resource type="PackedScene" uid="uid://fnppmucucsf3" path="res://Scenes/SpellCasting/CastingIndicators/MagicCircle.tscn" id="5_ppnlc"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerSliding.gd" id="5_sbfj4"]
[ext_resource type="PackedScene" uid="uid://cs233npw823ao" path="res://Scenes/SpellCasting/Spells/GroundSummonSpell.tscn" id="6_7bph8"]
[ext_resource type="Script" path="res://Scripts/SpellCasting/SpellEffects/Ice/FreezablePlayer.gd" id="8_ffrmc"]
[ext_resource type="PackedScene" uid="uid://dag86tou2cehq" path="res://Scenes/Effects/IceColumn.tscn" id="8_hsj6j"]
[ext_resource type="PackedScene" uid="uid://dwl3jj86owklh" path="res://Scenes/SpellCasting/CastingIndicators/IceColumnIndicator.tscn" id="9_b6ywe"]
[ext_resource type="PackedScene" uid="uid://dtluxk7384hxd" path="res://Scenes/Effects/Flammable.tscn" id="9_qwkcm"]
[ext_resource type="PackedScene" uid="uid://lsjae5plwkwx" path="res://Scenes/Effects/AreaHeal.tscn" id="10_ge2nk"]
[ext_resource type="PackedScene" uid="uid://gwlsad3v7l5s" path="res://Scenes/Characters/Health.tscn" id="10_s2uey"]
[ext_resource type="PackedScene" uid="uid://ctidfl3k4ontt" path="res://Scenes/Effects/UnFireColumn.tscn" id="11_eqfwq"]
[ext_resource type="PackedScene" uid="uid://bs65sapypvlwa" path="res://Scenes/SpellCasting/CastingIndicators/HealColumnIndicator.tscn" id="11_x5lty"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerAnimationTree.gd" id="11_xqlkm"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerMana.gd" id="12_6i8p7"]
[ext_resource type="PackedScene" uid="uid://dpnavhw8cg2ck" path="res://Scenes/Effects/HealableCharacter.tscn" id="13_qlj7p"]
[ext_resource type="PackedScene" uid="uid://btp3qchsyni6a" path="res://Scenes/SpellCasting/Spells/SelfSpell.tscn" id="13_y5uyg"]
[ext_resource type="PackedScene" uid="uid://cgpoj4f3uusio" path="res://Scenes/Effects/IceDecider.tscn" id="15_33a10"]
[ext_resource type="PackedScene" uid="uid://xsbfgrucribr" path="res://Scenes/Effects/IceBoard.tscn" id="15_xtf4v"]
[ext_resource type="PackedScene" uid="uid://ptwhwd5y6n8i" path="res://Scenes/Effects/DamageColumn.tscn" id="16_a3otw"]
[ext_resource type="PackedScene" uid="uid://dd55852bglfak" path="res://Scenes/Characters/StatusHealth.tscn" id="17_3jrpt"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerKnockDown.gd" id="25_ywuba"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2bqhc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mhhkq"]
radius = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_jxyqu"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c8f1t"]
height = 1.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g77ho"]
animation = &"BigOuchie_001"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u4u04"]
animation = &"Stand"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nukqu"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5wyrh"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2
advance_condition = &"start_standup"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fuvml"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dvbxk"]
states/BigOuchie_001/node = SubResource("AnimationNodeAnimation_g77ho")
states/BigOuchie_001/position = Vector2(408, 100)
states/Stand/node = SubResource("AnimationNodeAnimation_u4u04")
states/Stand/position = Vector2(713, 100)
transitions = ["Start", "BigOuchie_001", SubResource("AnimationNodeStateMachineTransition_nukqu"), "BigOuchie_001", "Stand", SubResource("AnimationNodeStateMachineTransition_5wyrh"), "Stand", "End", SubResource("AnimationNodeStateMachineTransition_fuvml")]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_hxia0"]
filter_enabled = true
filters = ["HumanRig/Skeleton3D:Head", "HumanRig/Skeleton3D:Neck", "HumanRig/Skeleton3D:l.arm", "HumanRig/Skeleton3D:l.arm.001", "HumanRig/Skeleton3D:l.shoulder", "HumanRig/Skeleton3D:r.arm", "HumanRig/Skeleton3D:r.arm.001", "HumanRig/Skeleton3D:r.shoulder", "HumanRig/Skeleton3D:spine.001"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_31ltn"]
animation = &"Spell(Other)"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ilfxc"]
filter_enabled = true
filters = ["HumanRig/Skeleton3D:Head", "HumanRig/Skeleton3D:Neck", "HumanRig/Skeleton3D:l.arm", "HumanRig/Skeleton3D:l.arm.001", "HumanRig/Skeleton3D:l.shoulder", "HumanRig/Skeleton3D:r.arm", "HumanRig/Skeleton3D:r.arm.001", "HumanRig/Skeleton3D:r.shoulder", "HumanRig/Skeleton3D:spine.001"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eh6pi"]
animation = &"Spell(Self)"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_rtblc"]
input_0/name = "not_dead"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "dead"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "knocked_down"
input_2/auto_advance = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_33x3j"]
animation = &"Dies"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s4ld8"]
animation = &"Jump_001"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_alqq1"]
animation = &"FloatInWater_loop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nkyb4"]
animation = &"Idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_0vibc"]
fadein_time = 0.1
fadeout_time = 0.3

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xwieg"]
animation = &"Jump"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_1kwml"]
filters = ["HumanRig/Skeleton3D:Head", "HumanRig/Skeleton3D:Neck", "HumanRig/Skeleton3D:l.arm", "HumanRig/Skeleton3D:l.arm.001", "HumanRig/Skeleton3D:l.shoulder", "HumanRig/Skeleton3D:r.arm", "HumanRig/Skeleton3D:r.arm.001", "HumanRig/Skeleton3D:r.shoulder", "HumanRig/Skeleton3D:spine.001"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bm3q7"]
animation = &"Jump_002"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_reaal"]
animation = &"Run_loop"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_j0yn7"]
filter_enabled = true
filters = ["HumanRig/Skeleton3D:Head", "HumanRig/Skeleton3D:Neck", "HumanRig/Skeleton3D:l.arm", "HumanRig/Skeleton3D:l.arm.001", "HumanRig/Skeleton3D:l.shoulder", "HumanRig/Skeleton3D:r.arm", "HumanRig/Skeleton3D:r.arm.001", "HumanRig/Skeleton3D:r.shoulder", "HumanRig/Skeleton3D:spine.001"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qmyab"]
animation = &"SmallOuchie"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_k873e"]
xfade_time = 0.1
input_0/name = "idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "run"
input_1/auto_advance = false
input_1/reset = false
input_2/name = "fall"
input_2/auto_advance = false
input_2/reset = false
input_3/name = "walk"
input_3/auto_advance = false
input_3/reset = false
input_4/name = "swim"
input_4/auto_advance = false
input_4/reset = false
input_5/name = "float"
input_5/auto_advance = false
input_5/reset = false

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txuoq"]
animation = &"Swim_loop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3pkky"]
animation = &"Walk_loop"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hssfi"]
graph_offset = Vector2(851.615, 555.182)
nodes/KnockDownStateMachine/node = SubResource("AnimationNodeStateMachine_dvbxk")
nodes/KnockDownStateMachine/position = Vector2(1240, 1000)
nodes/cast_spell_other/node = SubResource("AnimationNodeOneShot_hxia0")
nodes/cast_spell_other/position = Vector2(1160, 540)
nodes/cast_spell_other_anim/node = SubResource("AnimationNodeAnimation_31ltn")
nodes/cast_spell_other_anim/position = Vector2(780, 800)
nodes/cast_spell_self/node = SubResource("AnimationNodeOneShot_ilfxc")
nodes/cast_spell_self/position = Vector2(940, 420)
nodes/cast_spell_self_anim/node = SubResource("AnimationNodeAnimation_eh6pi")
nodes/cast_spell_self_anim/position = Vector2(680, 600)
nodes/dead_state/node = SubResource("AnimationNodeTransition_rtblc")
nodes/dead_state/position = Vector2(1620, 740)
nodes/death_anim/node = SubResource("AnimationNodeAnimation_33x3j")
nodes/death_anim/position = Vector2(1320, 820)
nodes/fall_anim/node = SubResource("AnimationNodeAnimation_s4ld8")
nodes/fall_anim/position = Vector2(-340, 120)
nodes/float_anim/node = SubResource("AnimationNodeAnimation_alqq1")
nodes/float_anim/position = Vector2(-360, 520)
nodes/idle_anim/node = SubResource("AnimationNodeAnimation_nkyb4")
nodes/idle_anim/position = Vector2(-340, -120)
nodes/jump/node = SubResource("AnimationNodeOneShot_0vibc")
nodes/jump/position = Vector2(280, 160)
nodes/jump_anim/node = SubResource("AnimationNodeAnimation_xwieg")
nodes/jump_anim/position = Vector2(100, 460)
nodes/land/node = SubResource("AnimationNodeOneShot_1kwml")
nodes/land/position = Vector2(480, 260)
nodes/land_anim/node = SubResource("AnimationNodeAnimation_bm3q7")
nodes/land_anim/position = Vector2(160, 620)
nodes/output/position = Vector2(1980, 740)
nodes/run_anim/node = SubResource("AnimationNodeAnimation_reaal")
nodes/run_anim/position = Vector2(-340, 0)
nodes/small_stagger/node = SubResource("AnimationNodeOneShot_j0yn7")
nodes/small_stagger/position = Vector2(720, 320)
nodes/small_stagger_anim/node = SubResource("AnimationNodeAnimation_qmyab")
nodes/small_stagger_anim/position = Vector2(440, 540)
nodes/state/node = SubResource("AnimationNodeTransition_k873e")
nodes/state/position = Vector2(60, 60)
nodes/swim_anim/node = SubResource("AnimationNodeAnimation_txuoq")
nodes/swim_anim/position = Vector2(-340, 380)
nodes/walk_anim/node = SubResource("AnimationNodeAnimation_3pkky")
nodes/walk_anim/position = Vector2(-340, 240)
node_connections = [&"cast_spell_other", 0, &"cast_spell_self", &"cast_spell_other", 1, &"cast_spell_other_anim", &"cast_spell_self", 0, &"small_stagger", &"cast_spell_self", 1, &"cast_spell_self_anim", &"dead_state", 0, &"cast_spell_other", &"dead_state", 1, &"death_anim", &"dead_state", 2, &"KnockDownStateMachine", &"jump", 0, &"state", &"jump", 1, &"jump_anim", &"land", 0, &"jump", &"land", 1, &"land_anim", &"output", 0, &"dead_state", &"small_stagger", 0, &"land", &"small_stagger", 1, &"small_stagger_anim", &"state", 0, &"idle_anim", &"state", 1, &"run_anim", &"state", 2, &"fall_anim", &"state", 3, &"walk_anim", &"state", 4, &"swim_anim", &"state", 5, &"float_anim"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ykar1"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
gravity = Vector3(0, 9.8, 0)
scale_min = 0.1
scale_max = 0.1
turbulence_enabled = true
turbulence_noise_strength = 0.3
turbulence_noise_scale = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hbv6g"]
albedo_color = Color(0, 0, 1, 1)
emission_enabled = true
emission = Color(0, 0, 1, 1)
emission_energy_multiplier = 8.1
disable_receive_shadows = true

[sub_resource type="QuadMesh" id="QuadMesh_qqcu5"]
material = SubResource("StandardMaterial3D_hbv6g")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2bqhc")

[node name="Visuals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Player2" parent="Visuals" instance=ExtResource("2_isjoo")]
transform = Transform3D(-0.4, 0, -6.03983e-08, 0, 0.4, 0, 6.03983e-08, 0, -0.4, 0, -1.02373, 0)

[node name="Skeleton3D" parent="Visuals/Player2/HumanRig" index="0"]
bones/0/position = Vector3(0, -2.90263, 0)
bones/1/rotation = Quaternion(0.171259, 0.0015137, 0.00870703, 0.985186)
bones/2/rotation = Quaternion(0.0353262, -2.3827e-07, -3.86163e-16, 0.999376)
bones/3/rotation = Quaternion(-0.425864, 0.000221478, -0.00883481, 0.904744)
bones/4/rotation = Quaternion(0.228593, 6.91889e-15, 5.45007e-08, 0.973522)
bones/5/rotation = Quaternion(0.559438, 0.232896, 0.79548, 5.79389e-05)
bones/6/rotation = Quaternion(0.00185565, -1.19209e-07, 2.21218e-10, 0.999998)
bones/7/rotation = Quaternion(-5.78799e-05, 0.79548, -0.232896, 0.559438)
bones/7/scale = Vector3(-2.85604, -2.85604, -2.85604)
bones/8/rotation = Quaternion(-0.168958, -0.0478624, -0.841778, 0.510463)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.0701454, 0.235489, -0.400234, 0.882857)
bones/10/rotation = Quaternion(0.679681, 0.0188545, -0.0469073, 0.731764)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.655527, 0.284903, -0.0770527, 0.695109)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.168958, 0.0478625, 0.841778, 0.510463)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.10927, -0.207741, 0.260138, 0.936607)
bones/14/rotation = Quaternion(0.421299, -0.0140773, -0.00269094, 0.906809)
bones/15/rotation = Quaternion(-0.655527, -0.284903, 0.0770527, 0.695109)
bones/16/rotation = Quaternion(0.525119, 0.477504, 0.521527, -0.47355)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.666337, 0.129443, 0.133714, 0.722053)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(7.4632e-09, -1.56851e-10, 0.342613, 0.939477)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.525119, -0.477504, -0.521527, -0.47355)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.623652, 0.233784, 0.258544, 0.699684)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(4.04321e-08, -6.62121e-09, -0.216846, 0.976206)
bones/22/rotation = Quaternion(0.99983, 0.0108688, 0.000448517, -0.0148776)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.173788, 0.685431, 0.685418, -0.173735)
bones/24/rotation = Quaternion(0, 0, 0.707107, 0.707107)
bones/25/rotation = Quaternion(-0.00377738, -1.19208e-07, -4.50299e-10, 0.999993)
bones/27/position = Vector3(1.03387, 4.56398, 2.30024)
bones/27/rotation = Quaternion(0.206142, -0.684582, 0.676392, -0.177051)
bones/28/position = Vector3(0.55033, 2.02037, -2.61533)
bones/28/rotation = Quaternion(0.5, -0.5, 0.5, -0.5)
bones/29/rotation = Quaternion(2.38419e-07, 0, 1, 0)
bones/30/position = Vector3(-2.6461, 4.09225, 0.737623)
bones/30/rotation = Quaternion(-0.19164, -0.680642, 0.680642, 0.19164)
bones/31/position = Vector3(-0.55033, 0.454776, 0.651239)
bones/31/rotation = Quaternion(0.5, 0.5, -0.5, -0.5)
bones/32/rotation = Quaternion(-2.38419e-07, 0, 1, 0)
bones/33/position = Vector3(-1.59399, 1.8946, 1.58137)
bones/33/rotation = Quaternion(0.916079, 0.0588983, 0.146356, 0.36866)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-1.77772, 1.51989, -0.206875)
bones/34/rotation = Quaternion(0.992821, -0.00716984, 0.0865252, -0.0822693)
bones/35/position = Vector3(-1.02045, 1.92981, -1.92634)
bones/35/rotation = Quaternion(0.987564, -0.0110857, 0.133782, -0.0818337)
bones/36/position = Vector3(0.997113, 1.43266, -0.0164457)
bones/36/rotation = Quaternion(0.977958, 0.0218527, -0.156242, -0.136782)
bones/36/scale = Vector3(1, 1, 1)
bones/37/position = Vector3(1.49528, 2.02923, -1.77487)
bones/37/rotation = Quaternion(0.963193, 0.0221716, -0.0839431, -0.254404)
bones/38/position = Vector3(1.18593, 2.87376, -2.49264)
bones/38/rotation = Quaternion(0.958093, 0.0342808, -0.12979, -0.253057)
bones/39/position = Vector3(0.00231923, 4.48408, -0.575627)
bones/39/rotation = Quaternion(0.921822, -0.000663237, -0.000200462, -0.387612)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(0.111442, -1.99878e-05, 0.000561641, 0.993771)
bones/41/rotation = Quaternion(0.152951, -1.63625e-05, 0.000224964, 0.988234)
bones/42/position = Vector3(-0.00299345, 3.11865, -2.70752)
bones/43/position = Vector3(-0.767778, 3.80562, 0.538721)
bones/43/rotation = Quaternion(0.934305, 0.0527986, 0.0304273, 0.351226)
bones/43/scale = Vector3(1, 1, 1)
bones/44/rotation = Quaternion(0.157147, 0.0764443, 0.306801, 0.935593)
bones/45/rotation = Quaternion(-0.144445, 0.090046, 0.140148, 0.97539)
bones/46/position = Vector3(-1.21856, 3.82293, 0.181662)
bones/46/rotation = Quaternion(0.945815, -0.301858, 0.119553, -0.00478496)
bones/46/scale = Vector3(1, 1, 1)
bones/47/rotation = Quaternion(0.110105, -0.0629344, -0.214723, 0.968406)
bones/48/rotation = Quaternion(7.21686e-05, -0.00754693, -0.148618, 0.988866)
bones/48/scale = Vector3(1, 1, 1)
bones/49/position = Vector3(-1.0307, 4.12433, -0.256991)
bones/49/rotation = Quaternion(0.947463, -0.00605045, 0.0306207, -0.318339)
bones/50/rotation = Quaternion(0.000791889, 0.143991, 0.0052963, 0.989565)
bones/51/rotation = Quaternion(0.00205854, -0.0115873, -0.0039703, 0.999923)
bones/52/position = Vector3(0.99671, 3.83612, 1.00268)
bones/52/rotation = Quaternion(0.978824, 0.0116926, -0.0554583, -0.196698)
bones/52/scale = Vector3(1, 1, 1)
bones/53/rotation = Quaternion(0.0033974, -0.0675636, 0.000244065, 0.997709)
bones/54/rotation = Quaternion(-0.00388837, -0.0769036, 0.000325463, 0.997031)
bones/55/position = Vector3(1.19244, 3.85613, 0.385216)
bones/55/rotation = Quaternion(0.895222, 0.126538, -0.144979, -0.401928)
bones/55/scale = Vector3(1, 1, 1)
bones/56/rotation = Quaternion(0.00547284, 0.0656621, 0.00212434, 0.997825)
bones/57/rotation = Quaternion(-0.00422237, 0.00555201, -0.00197356, 0.999974)
bones/57/scale = Vector3(1, 1, 1)
bones/58/position = Vector3(0.953583, 4.2599, -0.341967)
bones/58/rotation = Quaternion(0.898193, 0.00993902, -0.0379676, -0.437846)
bones/59/rotation = Quaternion(0.0332545, -0.143608, -0.0950996, 0.984493)
bones/60/rotation = Quaternion(0.0490329, 0.0119701, -0.0108636, 0.998666)

[node name="L_eye" parent="Visuals/Player2/HumanRig/Skeleton3D" index="0"]
transform = Transform3D(-1.06832, 0.743969, 2.54208, 0.75392, -2.54227, 1.06087, 2.53914, 1.06787, 0.754568, 1.03011, 7.2408, 3.43225)

[node name="MaskChin" parent="Visuals/Player2/HumanRig/Skeleton3D" index="1"]
transform = Transform3D(2.85604, -5.52704e-08, 3.21911e-08, 5.66295e-08, 2.85604, -4.03542e-06, -2.57444e-08, 3.78117e-06, 2.85604, -0.0658441, -3.20094, 1.31681)

[node name="R_eye" parent="Visuals/Player2/HumanRig/Skeleton3D" index="2"]
transform = Transform3D(1.06833, -0.743969, -2.54208, 0.75392, -2.54227, 1.06087, 2.53914, 1.06787, 0.754569, -1.1618, 7.2408, 3.43225)

[node name="NotShroomGrimoire" parent="Visuals/Player2/HumanRig/Skeleton3D" index="3"]
transform = Transform3D(-0.310659, 0.165969, 0.013486, 0.0496294, 0.119535, -0.327849, -0.158949, -0.287058, -0.128724, 0.850816, 1.44137, -0.77561)

[node name="NotShroomGrimoire" parent="Visuals/Player2/HumanRig/Skeleton3D/NotShroomGrimoire" index="0"]
transform = Transform3D(1, 2.98023e-08, -4.26326e-14, 2.98023e-08, 1, 0, 5.68434e-14, -2.84217e-14, 1, 0, 0, 0)

[node name="Grimoire_Rune" parent="Visuals/Player2/HumanRig/Skeleton3D" index="4"]
transform = Transform3D(0.165969, 0.310659, 0.013486, 0.119535, -0.0496294, -0.327849, -0.287058, 0.158949, -0.128724, 1.08528, 1.44416, -0.637917)

[node name="Grimoire_Rune" parent="Visuals/Player2/HumanRig/Skeleton3D/Grimoire_Rune" index="0"]
transform = Transform3D(1, -2.98023e-08, 0, -2.98023e-08, 1, 4.26326e-14, -2.84217e-14, -5.68434e-14, 1, 0, 0, 0)

[node name="Belt" parent="Visuals/Player2/HumanRig/Skeleton3D" index="5"]
transform = Transform3D(2.85559, -0.0476451, 0.0166758, 0.050479, 2.69528, -0.943344, -3.72888e-08, 0.943491, 2.6957, 0.0619779, -2.67488, -1.23048)

[node name="Vials" parent="Visuals/Player2/HumanRig/Skeleton3D" index="6"]
transform = Transform3D(-0.104056, -0.00498514, 0.000607655, -0.00183943, 0.282009, -0.0343749, 1.35878e-09, 0.0987181, 0.0982297, -0.850983, 0.962478, 1.17233)

[node name="ThirdPersonCamera" type="Node3D" parent="." node_paths=PackedStringArray("camera_target", "horizontal_pivot", "vertical_pivot", "spring_arm", "camera")]
top_level = true
script = ExtResource("1_5i1xc")
camera_target = NodePath("..")
horizontal_pivot = NodePath("HorizontalPivot")
vertical_pivot = NodePath("HorizontalPivot/VerticalPivot")
spring_arm = NodePath("HorizontalPivot/VerticalPivot/SpringArm3D")
camera = NodePath("HorizontalPivot/VerticalPivot/SpringArm3D/Camera3D")

[node name="HorizontalPivot" type="Node3D" parent="ThirdPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39274, 0)

[node name="VerticalPivot" type="Node3D" parent="ThirdPersonCamera/HorizontalPivot"]

[node name="SpringArm3D" type="SpringArm3D" parent="ThirdPersonCamera/HorizontalPivot/VerticalPivot"]
shape = SubResource("SphereShape3D_mhhkq")
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="ThirdPersonCamera/HorizontalPivot/VerticalPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.019)

[node name="PlayerMovement" type="Node3D" parent="." node_paths=PackedStringArray("player_node", "player_visuals_node", "animation_tree")]
script = ExtResource("2_afa8s")
player_node = NodePath("..")
player_visuals_node = NodePath("../Visuals")
animation_tree = NodePath("../AnimationTree")

[node name="PlayerSwimming" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.819372, 0)
collision_layer = 4
collision_mask = 4
script = ExtResource("4_t3yqj")
float_height = 0.3
swim_height = 0.5
water_density = 2.0
dampening_factor = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSwimming"]
shape = SubResource("BoxShape3D_jxyqu")

[node name="PlayerSliding" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("5_sbfj4")
spell_effect_scene = ExtResource("15_xtf4v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSliding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("CylinderShape3D_c8f1t")

[node name="MagicCircle" parent="." instance=ExtResource("5_ppnlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.03646, -3.1733)

[node name="SpellFactory" type="Node3D" parent="."]
script = ExtResource("4_8qt2s")

[node name="FireColumnSummonSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]

[node name="IceColumnSummonSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]
blue_rune_type = 1
spell_effect_scene = ExtResource("8_hsj6j")
ground_aim_indicator_scene = ExtResource("9_b6ywe")

[node name="HealSummonSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]
blue_rune_type = 2
red_rune_type = 1
spell_effect_scene = ExtResource("10_ge2nk")
ground_aim_indicator_scene = ExtResource("11_x5lty")

[node name="UnFireColumnSummonSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]
red_rune_type = 1
spell_effect_scene = ExtResource("11_eqfwq")

[node name="SnowboardSpell" parent="SpellFactory" instance=ExtResource("13_y5uyg")]
blue_rune_type = 1
red_rune_type = 1

[node name="SlipperyGroundSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]
blue_rune_type = 1
red_rune_type = 1
spell_effect_scene = ExtResource("15_33a10")
ground_aim_indicator_scene = ExtResource("9_b6ywe")

[node name="GroundSummonSpell" parent="SpellFactory" instance=ExtResource("6_7bph8")]
blue_rune_type = 2
spell_effect_scene = ExtResource("16_a3otw")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Visuals/Player2")
tree_root = SubResource("AnimationNodeBlendTree_hssfi")
anim_player = NodePath("../Visuals/Player2/AnimationPlayer")
parameters/KnockDownStateMachine/conditions/start_standup = false
parameters/cast_spell_other/active = false
parameters/cast_spell_other/internal_active = false
parameters/cast_spell_other/request = 0
parameters/cast_spell_self/active = false
parameters/cast_spell_self/internal_active = false
parameters/cast_spell_self/request = 0
parameters/dead_state/current_state = "not_dead"
parameters/dead_state/transition_request = ""
parameters/dead_state/current_index = 0
parameters/jump/active = false
parameters/jump/internal_active = false
parameters/jump/request = 0
parameters/land/active = false
parameters/land/internal_active = false
parameters/land/request = 0
parameters/small_stagger/active = false
parameters/small_stagger/internal_active = false
parameters/small_stagger/request = 0
parameters/state/current_state = "run"
parameters/state/transition_request = ""
parameters/state/current_index = 1
script = ExtResource("11_xqlkm")

[node name="Freezable" type="Node3D" parent="." node_paths=PackedStringArray("player_movement")]
script = ExtResource("8_ffrmc")
player_movement = NodePath("../PlayerMovement")

[node name="Flammable" parent="." instance=ExtResource("9_qwkcm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05667, 0)

[node name="Healable" parent="." instance=ExtResource("13_qlj7p")]

[node name="Health" parent="." instance=ExtResource("10_s2uey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.50256, 0)
visible = false
is_player = true

[node name="StatusHealth" parent="." instance=ExtResource("17_3jrpt")]
visible = false
max_health = 50.0

[node name="Mana" type="Node3D" parent="."]
script = ExtResource("12_6i8p7")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Mana"]
emitting = false
amount = 50
visibility_aabb = AABB(-4, -6.268, -4, 8, 12.536, 8)
transform_align = 3
process_material = SubResource("ParticleProcessMaterial_ykar1")
draw_pass_1 = SubResource("QuadMesh_qqcu5")

[node name="KnockDown" type="Node3D" parent="."]
script = ExtResource("25_ywuba")
knock_down_duration = 5.0

[connection signal="cast" from="SpellFactory/SnowboardSpell" to="PlayerSliding" method="_on_snowboard_spell_cast"]

[editable path="Visuals/Player2"]
